--- a/style.css
+++ b/style.css
@@ -1,55 +1,63 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-body{
+body {
     background-color: azure;
-}
-
-.div-container{
-    background-color: #fff;
     display: flex;
-    flex-direction: column;
-    position: absolute;
+    justify-content: center; 
+    align-items: center; 
+    height: 100vh; 
+}
+
+.div-container {
+    background-color: #fff;
+    max-width: 400px;
     padding: 50px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
 }
 
-h1{
-    text-align: center;
+h1 {
     color: rgb(92, 185, 189);
+    text-align: center;
 }
 
-.label-text{
+.label-text {
     font-size: 12px;
+    display: block;
+    margin-bottom: 5px;
 }
 
-.inputs-type{
+.inputs-type {
     padding: 12px;
     border: none;
     background-color: aliceblue;
+    width: 100%;
+    margin-bottom: 15px;
 }
 
-button{
+button {
     font-size: 16px;
     padding: 12px;
-    width: 100%;
     border: none;
     background-color: rgb(92, 185, 189);
     color: #fff;
+    width: 100%;
 }
 
-.a-href-1{
-    list-style: none;
+.a-href-1 {
     text-decoration: none;
     color: rgb(92, 185, 189);
 }
 
-.label-text, .inputs-type, .remember, .btn-login, .register-link {
-    margin-bottom: 10px; 
+.inputs-type, .remember, .btn-login, .register-link {
+    margin-bottom: 15px; 
+}
+
+@media screen and (max-width: 600px) {
+    .div-container {
+        padding: 20px;
+    }
 }
