--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: azure;
+    background-image: linear-gradient(100deg,#fff,bisque);
     display: flex;
     justify-content: center; 
     align-items: center; 
@@ -45,6 +45,7 @@ button {
     background-color: rgb(92, 185, 189);
     color: #fff;
     width: 100%;
+    cursor: pointer;
 }
 
 .a-href-1 {
