--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-image: linear-gradient(100deg,#fff,bisque);
+    background-image: linear-gradient(100deg,rgb(0, 183, 255), rgb(0, 60, 255));
     display: flex;
     justify-content: center; 
     align-items: center; 
@@ -17,10 +17,11 @@ body {
     background-color: #fff;
     max-width: 400px;
     padding: 60px;
+    border-radius: 10px;
 }
 
 h1 {
-    color: rgb(0, 119, 255);
+    color: rgb(61, 151, 255);
     text-align: center;
 }
 
@@ -36,6 +37,7 @@ h1 {
     background-color: aliceblue;
     width: 100%;
     margin-bottom: 15px;
+    border: solid 1px #00000009;
 }
 
 button {
@@ -46,6 +48,7 @@ button {
     color: #fff;
     width: 100%;
     cursor: pointer;
+    border: solid 1px #0099ff;
 }
 
 .a-href-1 {
