--- a/style.css
+++ b/style.css
@@ -6,7 +6,9 @@
 }
 
 body {
-    background-image: linear-gradient(100deg,rgb(0, 183, 255), rgb(0, 60, 255));
+    background-image: url(/quanto-vale-a-sua-empresa-1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
     justify-content: center; 
     align-items: center; 
@@ -19,7 +21,7 @@ form{
 }
 
 .div-container {
-    background-color: #fff;
+    backdrop-filter: blur(15px);
     max-width: 400px;
     padding: 60px;
     border-radius: 10px;
@@ -34,6 +36,7 @@ h1 {
     font-size: 12px;
     display: block;
     margin-bottom: 5px;
+    color: white;
 }
 
 .inputs-type {
@@ -59,6 +62,14 @@ button {
 .a-href-1 {
     text-decoration: none;
     color: rgb(0, 119, 255);
+}
+
+.remember{
+    color: white;
+}
+
+.paragrafo-1{
+    color: white;
 }
 
 .inputs-type, .remember, .btn-login, .register-link {
