--- a/style.css
+++ b/style.css
@@ -46,22 +46,23 @@ h1 {
     width: 100%;
     margin-bottom: 15px;
     border: solid 1px #00000009;
+    border-radius: 4px;
 }
 
 button {
     font-size: 16px;
     padding: 12px;
     border: none;
-    background-color: rgb(0, 119, 255);
+    background-color: rgb(0, 153, 255);
     color: #fff;
     width: 100%;
     cursor: pointer;
-    border: solid 1px #0099ff;
+    border-radius: 4px;
 }
 
 .a-href-1 {
-    text-decoration: none;
-    color: rgb(0, 119, 255);
+    text-decoration: underline;
+    color: rgb(0, 153, 255);
 }
 
 .remember{
